fixed overflow on phones

--- a/style.css
+++ b/style.css
@@ -38,6 +38,11 @@
 	box-sizing: border-box;
 }
 
+html,
+body {
+	overflow-x: hidden;
+}
+
 body {
 	font-family: var(--font-primary);
 }
@@ -616,13 +621,13 @@ footer {
 	flex-direction: column;
 	align-items: center;
 	padding: 4rem;
-	flex-wrap: wrap;
 }
 
 .footer-links ul {
 	display: flex;
 	gap: 1rem;
 	padding-bottom: 2rem;
+	flex-wrap: wrap;
 }
 
 .footer-links a,
